display-config: ignore outputs that has no modes

https://bugzilla.gnome.org/show_bug.cgi?id=753927